added livedata to getAll method in UserDao

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,10 @@ android {
             multiDexEnabled true
         }
     }
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }
 }
 
 dependencies {
@@ -25,4 +29,8 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:26.1.0'
     compile 'android.arch.persistence.room:runtime:' + rootProject.archRoomVersion;
     annotationProcessor 'android.arch.persistence.room:compiler:' + rootProject.archRoomVersion;
+
+
+    compile 'android.arch.lifecycle:runtime:' + rootProject.archRoomVersion
+    compile 'android.arch.lifecycle:extensions:' + rootProject.archRoomVersion
 }
